--- a/pengalamanbekerja.html
+++ b/pengalamanbekerja.html
@@ -37,6 +37,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
         <a class="nav-item nav-link" href="https://github.com/AdrianusPanjaitan">Projek</a>
         <a class="nav-item nav-link" href="https://www.youtube.com/@DRIediting">Youtube</a>
         <a class="nav-item nav-link" href="https://linkedin.com/in/adrianuspanjaitan">Linkedin</a>
