--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <a class="btn btn-tombol btn-lg" href="mailto:adrianuspanjaitan00@gmail.com"><i
                   class="fas fa-envelope email"></i> <b>Email</b></a>
               <a href="https://www.instagram.com/driii.pj/"><i class="fab fa-instagram sosmed"></i></a>
-              <a href="https://api.whatsapp.com/send?phone=6285215496718/"><i class="fab fa-whatsapp sosmed"></i></a>
+              <a href="https://wa.me/message/QFMMB3VLTFX5D1"><i class="fab fa-whatsapp sosmed"></i></a>
               <a href="https://web.facebook.com/"><i class="fab fa-facebook-f sosmed"></i></a>
             </div>
           </div>
