--- a/pengalamanbekerja.html
+++ b/pengalamanbekerja.html
@@ -113,7 +113,7 @@
                 peta</u></a></p>
           <a href="mailto:adrianuspanjaitan00@gmail.com"><i class="fas fa-envelope sosmed email"></i></a>
           <a href="https://www.instagram.com/driii.pj/"><i class="fab fa-instagram sosmed instagram"></i></a>
-          <a href="https://api.whatsapp.com/send?phone=6285215496718/"><i
+          <a href="https://wa.me/message/QFMMB3VLTFX5D1"><i
               class="fab fa-whatsapp sosmed whatsapp"></i></a>
           <a href="https://web.facebook.com/"><i class="fab fa-facebook-f sosmed facebook"></i></a>
         </div>
